# EPF_Testing

./: README.md
Desktop/EPF_TestScripts/: EPF_Testing.py
ros2_ws/src/crazyswarm2/crazyflie/config/: crazyflies.yaml  motion_capture.yaml
ros2_ws/src/crazyswarm2/crazyflie/scripts/: crazyflie_hub.py  crazyflie_server.py
ros2_ws/src/crazyswarm2/crazyflie/src/: crazyflie_server.cpp
ros2_ws/src/crazyswarm2/crazyflie_examples/: CMakeLists.txt  setup.cfg
ros2_ws/src/crazyswarm2/crazyflie_examples/crazyflie_examples/: SCCA_Swarm_Control.py  SCCA_detect_avoid.py  SCCA_goal_commander.py  SCCA_waypoint_gen.py  ViconData_Grapher.py  detect_avoid.py  goal_commander.py  swarmSequence.py  waypoint_gen.py
ros2_ws/src/crazyswarm2/crazyflie_examples/launch/: SCCA_multiple_ca_launch.py  commander_ca_launch.py  multiple_ca_launch.py
ros2_ws/src/crazyswarm2/crazyflie_interfaces/: CMakeLists.txt
ros2_ws/src/crazyswarm2/crazyflie_interfaces/msg/: CollDetect.msg  InFlight.msg  SCCAwp.msg  WayPoint.msg
ros2_ws/src/crazyswarm2/crazyflie_interfaces/srv/: CA.srv  ChangeWayPoint.srv  Shape.srv
