[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    SCCA_detect_avoid.py = crazyflie_examples.SCCA_detect_avoid:main
    SCCA_goal_commander.py = crazyflie_examples.SCCA_goal_commander:main
    SCCA_waypoint_gen.py = crazyflie_examples.SCCA_waypoint_gen:main
    SCCA_Swarm_Control.py = crazyflie_examples.SCCA_Swarm_Control:main
    swarmSequence.py = crazyflie_examples.swarmSequence:main
